# Game-Console

./: .gitignore  README.md
multiplayer/: CMakeLists.txt
multiplayer/common/Inc/: SocketAddress.h  SocketAddressFactory.h  SocketUtil.h  TCPSocket.h  UDPSocket.h
multiplayer/common/Src/: SocketAddress.cpp  SocketAddressFactory.cpp  SocketUtil.cpp  TCPSocket.cpp  UDPSocket.cpp
multiplayer/pong/pong-game/Inc/: Ball.h  Paddles.h
multiplayer/pong/pong-game/Src/: Ball.cpp  Paddles.cpp
server/: CMakeLists.txt
software/: Block.cpp  Block.h  Color.cpp  Color.h  Direction.cpp  Direction.h  Engine.cpp  Engine.h  InputBlocking.cpp  InputBlocking.h  PlayingField.cpp  PlayingField.h  Result.cpp  Result.h  StraightTetromino.h  TetrisDisplay.cpp  TetrisDisplay.h  TetrisEngine.h  TetrisProperties.cpp  TetrisProperties.h  Tetromino.cpp  Tetromino.h  TetrominoFactory.cpp  TetrominoFactory.h  TetrominoL1.h  TetrominoL2.h  TetrominoSkew1.h  TetrominoSkew2.h  TetrominoSquare.h  TetrominoStraight.h  TetrominoT.h  Vector2D.cpp  Vector2D.h  platformio.ini  software.ino
software/desktop/pong-desktop/: CMakeLists.txt  ReadMe.md
software/desktop/pong-server/: CMakeLists.txt  ReadMe.md  Server.cpp
software/include/battery-ui/: BatteryApplication.h  BatteryDisplay.h  BatteryIcon.h  BatteryUI.h
software/include/cursor/: Cursor.h  CursorDisplay.h  CursorShape.h  WindowsArrow.h
software/include/exceptions/: ForbiddenOperation.h
software/include/keyboard/: KeySet.h  KeyboardDisplay.h  KeyboardFactory.h  StandardKeyboardService.h  key.h  keyboard.h
software/include/menu/: App.h  AppMenu.h
software/include/multiplayer/: ServerMetadataInput.h  ServerMetadataInputDisplay.h
software/include/notepad/: NotepadApplication.h  NotepadDisplay.h  NotepadEngine.h  NotepadIcon.h  Text.h
software/include/paint/: Canvas.h  ColorBox.h  PaintApplication.h  PaintDisplay.h  PaintEngine.h  PaintIcon.h
software/include/pong/: Communicates.h  Move.h  PongScore.h  PongSocketTCP.h  Table.h
software/include/pong-console-client/: ConsoleClient.h  ConsoleClientDisplay.h  PongApplication.h  PongIcon.h
software/include/snake/: Area.h  Fruit.h  Snake.h  SnakeApplication.h  SnakeDisplay.h  SnakeEngine.h  SnakeIcon.h  SnakeScore.h
software/include/tetris/: Block.h  PlayingField.h  Result.h  TetrisApplication.h  TetrisDisplay.h  TetrisEngine.h  TetrisIcon.h  TetrisProperties.h  Tetromino.h  TetrominoFactory.h
software/include/utils/: BasicDisplay.h  Battery.h  DigitalLCD.h  Icon.h  Pixel.h  Timer.h  UserInput.h  Vector2D.h  mymemory.h
software/include/wifi-ui/: WiFiApplication.h  WiFiConnectionInitializer.h  WiFiDisplay.h  WiFiIcon.h  WiFiNetworkUI.h  WiFiUI.h
software/pong-desktop/: CMakeLists.txt  DesktopClient.cpp  DesktopClient.h
software/pong-server/: CMakeLists.txt  Server.h
software/src/: Color.cpp  Color.h  DigitalLCD.h  Direction.cpp  Pixel.cpp  Pixel.h  UserInput.cpp  UserInput.h  Vector2D.h  main.cpp
software/src/app-menu/: App.h  AppDisplay.h  AppMenu.cpp  AppMenu.h
software/src/battery-ui/: BatteryApplication.cpp  BatteryDisplay.cpp  BatteryUI.cpp
software/src/common/: BasicDisplay.cpp  BasicDisplay.h  Color.cpp  Color.h  Icon.h  Pixel.cpp  Pixel.h  Timer.cpp  Timer.h
software/src/cursor/: Cursor.cpp  Cursor.h  CursorDisplay.cpp  CursorDisplay.h  WindowsArrow.cpp
software/src/keyboard/: KeySet.cpp  KeySet.h  KeyboardDisplay.cpp  KeyboardDisplay.h  KeyboardFactory.cpp  KeyboardFactory.h  StandardKeyboardService.cpp  StandardKeyboardService.h  key.cpp  key.h  keyboard.cpp  keyboard.h
software/src/main-menu/: MainMenu.cpp  MainMenu.h  MainMenuDisplay.cpp  MainMenuDisplay.h
software/src/menu/: AppMenu.cpp  Application.h  Icon.h  Menu.cpp  Menu.h  MenuDisplay.cpp  MenuDisplay.h
software/src/multiplayer/: ServerMetadataInput.cpp  ServerMetadataInputDisplay.cpp
software/src/multiplayer/pong-server/: CMakeLists.txt  Server.cpp  Server.h
software/src/notepad/: NotepadApplication.cpp  NotepadApplication.h  NotepadDisplay.cpp  NotepadDisplay.h  NotepadEngine.cpp  NotepadEngine.h  NotepadIcon.h  Text.cpp  Text.h
software/src/paint/: Canvas.cpp  Canvas.h  ColorBox.cpp  ColorBox.h  PaintApplication.cpp  PaintApplication.h  PaintDisplay.cpp  PaintDisplay.h  PaintEngine.cpp  PaintEngine.h  PaintIcon.h
software/src/pong/: Move.cpp  Paddle.cpp  PongSocketTCP.cpp  Score.cpp
software/src/pong-console-client/: ConsoleClient.cpp  ConsoleClientDisplay.cpp  PongApplication.cpp
(+129 files in other folders)
